# PythonProjectDeployment

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .scaffold.env.example  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  USAGE.md  genindex.html  implementation_plan.md  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.clinerules/: 00-critical.md  01-project-structure.md  02-coding-standards.md  03-testing.md  04-documentation.md  05-dependencies.md  06-mcp-tools.md  07-banned-terms.md
.clinerules/workflows/: ReviewDocumentHistory.md  scaffolding-guide.md
.doctrees/: environment.pickle  index.doctree
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  ci.yml  main.yml
_modules/: index.html
_modules/python_project_deployment/: models.html  scaffolder.html
_sources/: index.rst.txt
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
python_project_deployment/: __init__.py  cli.py  directory_structure.py  exceptions.py  logging_config.py  models.py  rollback.py  scaffolder.py  subprocess_runner.py
python_project_deployment/templates/: .env.j2  .gitignore.j2  CONTRIBUTING.md.j2  LICENSE.j2  Makefile.j2  README.md.j2  ci.yaml.j2  conf.py.j2  feature_request.yml.j2  hello.py.j2  index.rst.j2  logger_init.py.j2  package_init.py.j2  pre-commit-config.yaml.j2  publish.yaml.j2  py.typed.j2  pyproject.toml.j2
scripts/: security_bandit_check.py  security_safety_check.py
src/python_project_deployment/: cli.py  config.py  directory_structure.py  models.py  rollback.py  scaffolder.py  security.py  subprocess_runner.py
src/python_project_deployment/logger/: __init__.py  logger.py
src/python_project_deployment/templates/: CHANGELOG.md.j2  Makefile.j2  SECURITY.md.j2  bug_report.yml.j2  conf.py.j2  conftest.py.j2  development.rst.j2  docs.yaml.j2  issue_config.yml.j2  logger.py.j2  main.py.j2  pre-commit-config.yaml.j2  pull_request_template.md.j2  pyproject.toml.j2  quickstart.rst.j2  security.rst.j2  security_bandit_check.py.j2  security_safety_check.py.j2  test_hello.py.j2  utils_init.py.j2
tests/: conftest.py  test_config.py  test_exceptions.py  test_models.py  test_rollback.py  test_security.py  test_subprocess_runner.py
tests/integration/: test_scaffolder.py
tests/unit/: test_config.py  test_directory_structure.py  test_exceptions.py  test_models.py  test_rollback.py  test_security.py  test_subprocess_runner.py
